# ruin

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  README.md  flake.nix
docs/: TODO.md
example/: CMakeLists.txt  example01.cpp
examples/: CMakeLists.txt  ruin_with_raylib.c  ruin_with_raylib.cpp
src/: CMakeLists.txt  base.c  base.h  ruin.c  ruin.h  ruin_core.c  ruin_core.h  ruin_opengl.c  ruin_raylib.c  ruin_raylib_render.c  ruin_sdl.c  ruin_test.c  ruin_widget.c  ruin_widget.h
